Fixed not showing images

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -150,7 +150,7 @@ section {
 	position: relative;
 	height: 100vh;
 	width: 100%;
-	background-image: url('img/livingroom-1032733_640.jpg');
+	background-image: url('../img/livingroom-1032733_640.jpg');
 	background-size: cover;
 	// background-repeat: no-repeat;
 	background-position: center;
@@ -275,7 +275,7 @@ section {
 .section__hero-img {
 	position: relative;
 	padding: 7em;
-	background-image: url('img/herosmall.jpg');
+	background-image: url('../img/herosmall.jpg');
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -585,7 +585,7 @@ section {
 
 	.section__hero-img {
 		padding: 10em;
-		background-image: url('img/herobig.jpg');
+		background-image: url('../img/herobig.jpg');
 
 		&-title {
 			font-size: 2.8rem;
@@ -651,7 +651,7 @@ section {
 
 @media (min-width: 992px) {
 	.header__img {
-		background-image: url('img/livingroom-1032733_1280.jpg');
+		background-image: url('../img/livingroom-1032733_1280.jpg');
 	}
 
 	.navbar {
